--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,6 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/colors"
+        app:srcCompat="@drawable/titlescreenwithbackground"
         tools:layout_editor_absoluteX="0dp" />
 </android.support.constraint.ConstraintLayout>
